syntax = "proto3";
package cheetah.userstore.external;

service Update {
    rpc SetLong(SetLongRequest) returns (UpdateReply);
    rpc SetDouble(SetDoubleRequest) returns (UpdateReply);
}

enum UpdateStatus {
    OK = 0;
    ERROR = 1;
}

message UpdateReply {
    UpdateStatus status = 1;
}

message SetLongRequest {
    string fieldName = 1;
    sint64 value = 2;
}

message SetDoubleRequest {
    string fieldName = 1;
    double value = 2;
}

service Fetch {
    rpc GetLong(GetLongRequest) returns (GetLongReply);
    rpc GetDouble(GetDoubleRequest) returns (GetDoubleReply);
}

message GetLongRequest {
    string fieldName = 1;
}

message GetLongReply {
    sint64 value = 1;
}

message GetDoubleRequest {
    string fieldName = 1;
}

message GetDoubleReply {
    double value = 1;
}
